# Trine

./: BENCHMARKS.md  LICENSE  README.md  TRINE_ISA.md  TRINE_LANG.md  TRINE_SPEC.md  pyproject.toml
.github/workflows/: test.yml
examples/: array_sum.trine  call_leaf.trine  count_to_five.trine  count_to_five_asm.py  factorial.trine  factorial_asm.py  factorial_call.trine  factorial_high_level.tri  factorial_vm.py  high_level_examples.py  linked_list_walk.trine  memory_examples.py  state_table_fsm.trine  subroutine_examples.py  sum_to_high_level.tri
src/trine/: __init__.py  __main__.py  assembler.py  benchmarks.py  cli.py  compiler.py  formatting.py  fsm.py  machine.py  model.py  operations.py  tape.py  trit.py  vm.py
tests/: conftest.py  test_assembler_bundle.py  test_compiler.py  test_subroutines.py  test_trine.py
