[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trine"
version = "0.1.0"
description = "A constraint-native balanced ternary computer. ALU, VM, and stored programs derived from first principles."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Dylan Griffin"},
]
keywords = ["ternary", "balanced-ternary", "vm", "alu", "fsm", "constraint-native"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = ["pytest>=8.0,<9.0"]

[project.scripts]
trine = "trine.cli:main"
trine-bench = "trine.benchmarks:main"
trine-compile = "trine.compiler:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
